# purelang_binary

./: Cargo.toml
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs  read_from_file.rs  write_to_file.rs
src/: assembly.rs  core.rs  implement.rs  lib.rs  matcher  tests.rs  traits.rs  ty.rs
src/traits/: implementations.rs
src/ty/: class.rs  field.rs  method.rs  struct.rs
