[package]
name = "pure_lang_binary"
version.workspace = true
edition = "2024"

[workspace]
package.version = "0.1.0"
members = ["crates/proc_macros"]

[workspace.dependencies]
global = { package = "pure_lang_global", git = "https://github.com/ExPuritate/purelang_global.git" }
num_enum = "0.7.4"
enumflags2 = { version = "0.7.12", features = ["std"] }
thiserror = "2.0.12"
derive_more = { version = "2.0.1", features = ["full"] }

[dependencies]
global = { workspace = true }
num_enum = { workspace = true }
enumflags2 = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
proc_macros = { path = "./crates/proc_macros", package = "pure_lang_binary_proc_macros" }
const_for = "0.1.5"
